Added generic catch all object for any new unknown objects in the SE universe - which is a temporary placeholder for the new Metor object. Updated SE binaries. Updated version pending release.

--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -29,7 +29,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal" Grid.ColumnSpan="2">
             <Label>Structure -</Label>
             <TextBlock VerticalAlignment="Center" Text="{Binding ClassType, Converter={StaticResource EnumToResouceConverter}}" />
         </StackPanel>
