--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -5,7 +5,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:converters="clr-namespace:SEToolbox.Converters"
              xmlns:controls="clr-namespace:SEToolbox.Controls"
-             xmlns:props="clr-namespace:SEToolbox.Properties"
              xmlns:views="clr-namespace:SEToolbox.Views"
              xmlns:s="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
@@ -136,7 +135,7 @@
         <Label Grid.Column="0" Grid.Row="3" Content="Position:"/>
         <views:ControlPosition Grid.Column="1" Grid.Row="3"/>
 
-        <ScrollViewer Grid.Row="4" Grid.ColumnSpan="2">
+        <ScrollViewer Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -163,15 +162,15 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Grid.Row="0" Margin="4 0 4 0" Text="Piloted:"/>
+                <TextBlock Grid.Row="0" Grid.Column="0" Margin="4 0 4 0" Text="Piloted:"/>
                 <TextBlock Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" Text="{Binding IsPiloted}" />
-                <TextBlock Grid.Row="1" Margin="4 0 4 0" Text="Damage:"/>
+                <TextBlock Grid.Row="1" Grid.Column="0" Margin="4 0 4 0" Text="Damage:"/>
                 <TextBlock Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Text="{Binding DamageCount}" />
-                <TextBlock Grid.Row="2" Margin="4 0 4 0" Text="Speed:"/>
-                <TextBlock Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Speed, StringFormat='{}{0:#,###0.000} m/s'}" />
-                <TextBlock Grid.Row="3" Margin="4 0 4 0" Text="Distance:"/>
+                <TextBlock Grid.Row="2" Grid.Column="0" Margin="4 0 4 0" Text="Speed:"/>
+                <TextBlock Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" Text="{Binding LinearVelocity, StringFormat='{}{0:#,###0.000} m/s'}" />
+                <TextBlock Grid.Row="3" Grid.Column="0" Margin="4 0 4 0" Text="Distance:"/>
                 <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlayerDistance, StringFormat='{}{0:#,###0.0} m'}" />
-                <TextBlock Grid.Row="4" Margin="4 0 4 0" Text="Scale:"/>
+                <TextBlock Grid.Row="4" Grid.Column="0" Margin="4 0 4 0" Text="Scale:"/>
                 <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center">
                     <TextBlock.Text>
                         <MultiBinding StringFormat="{}{0} × {1} × {2} blocks">
@@ -191,11 +190,11 @@
                         </MultiBinding>
                     </TextBlock.Text>
                 </TextBlock>
-                <TextBlock Grid.Row="6" Margin="4 0 4 0" Text="Mass:"/>
+                <TextBlock Grid.Row="6" Grid.Column="0" Margin="4 0 4 0" Text="Mass:"/>
                 <TextBlock Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Mass, StringFormat='{}{0:#,###0.00} Kg'}" />
-                <TextBlock Grid.Row="7" Margin="4 0 4 0" Text="Blocks:"/>
+                <TextBlock Grid.Row="7" Grid.Column="0" Margin="4 0 4 0" Text="Blocks:"/>
                 <TextBlock Grid.Row="7" Grid.Column="1" VerticalAlignment="Center" Text="{Binding BlockCount, StringFormat='{}{0:#,###0}'}" />
-                <TextBlock Grid.Row="8" Margin="4 0 4 0" Text="Time to produce parts:"/>
+                <TextBlock Grid.Row="8" Grid.Column="0" Margin="4 0 4 0" Text="Time to produce parts:"/>
                 <TextBlock Grid.Row="8" Grid.Column="1" VerticalAlignment="Center" Text="{Binding TimeToProduce, StringFormat='{}{0:dd} days, {0:hh} hours, {0:mm\\:ss\\.ff}'}"/>
 
                 <Separator Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2"/>
