--- a/Main/SEToolbox/SEToolbox/Views/ControlMultiple.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlMultiple.xaml
@@ -3,8 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:views="clr-namespace:SEToolbox.Views"
-             xmlns:props="clr-namespace:SEToolbox.Properties"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
@@ -16,15 +14,13 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Label Grid.ColumnSpan="2">
             <Label.Content>
-                <TextBlock Text="{Binding Path=Selections.Count, StringFormat='{}Multiple Items: {0:#,###0}'}" />
+                <TextBlock Text="{Binding Path=Selections.Count, StringFormat='{}Multiple Items Selected: {0:#,###0}'}" />
             </Label.Content>
         </Label>
-        <!--
-        <Label Grid.Row="2" Grid.Column="0" Content="Position:"/>
-        <views:ControlPosition Grid.Row="2" Grid.Column="1"/>-->
     </Grid>
 </UserControl>
