--- a/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
@@ -67,11 +67,6 @@
                             <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=asteroid}" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Generate Asteroid Field" Command="{Binding GenerateVoxelFieldCommand}">
-                        <MenuItem.Icon>
-                            <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=asteroid}" />
-                        </MenuItem.Icon>
-                    </MenuItem>
                     <MenuItem Header="Image" Command="{Binding ImportImageCommand}" ToolTip="Import a image into a flat array of armor, with color matched to each pixel in the image.">
                         <MenuItem.Icon>
                             <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=photo_scenery}" />
@@ -93,6 +88,17 @@
                         <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=export}" />
                     </MenuItem.Icon>
                 </MenuItem>
+                <MenuItem Header="_Create" Command="{Binding ImportCommand}" Padding="0,2,4,2">
+                    <MenuItem.Icon>
+                        <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=package_add}" />
+                    </MenuItem.Icon>
+                    <MenuItem Header="Generate Asteroid Field" Command="{Binding GenerateVoxelFieldCommand}">
+                        <MenuItem.Icon>
+                            <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=asteroid}" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                </MenuItem>
+
                 <Separator Style="{StaticResource DockPanelSeparator}" />
                 <MenuItem Header="World" Command="{Binding WorldCommand}" Padding="0,2,4,2">
                     <MenuItem.Icon>
