--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -8,10 +8,11 @@
              xmlns:views="clr-namespace:SEToolbox.Views"
              xmlns:s="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
-             d:DesignHeight="400" d:DesignWidth="400">
+             d:DesignHeight="400" d:DesignWidth="600">
     <UserControl.Resources>
         <converters:EnumToResouceConverter x:Key="EnumToResouceConverter"/>
         <converters:ResouceToImageConverter x:Key="ResouceToImageConverter"/>
+        <converters:DDSConverter x:Key="DDSConverter"/>
         <Style TargetType="ListViewItem">
             <Setter Property="HorizontalContentAlignment" Value="Stretch" />
         </Style>
@@ -194,7 +195,7 @@
                 <TextBlock Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Mass, StringFormat='{}{0:#,###0.00} Kg'}" />
                 <TextBlock Grid.Row="7" Grid.Column="0" Margin="4 0 4 0" Text="Blocks:"/>
                 <TextBlock Grid.Row="7" Grid.Column="1" VerticalAlignment="Center" Text="{Binding BlockCount, StringFormat='{}{0:#,###0}'}" />
-                <TextBlock Grid.Row="8" Grid.Column="0" Margin="4 0 4 0" Text="Time to produce parts:"/>
+                <TextBlock Grid.Row="8" Grid.Column="0" Margin="4 0 4 0" Text="Total time to produce:"/>
                 <TextBlock Grid.Row="8" Grid.Column="1" VerticalAlignment="Center" Text="{Binding TimeToProduce, StringFormat='{}{0:dd} days, {0:hh} hours, {0:mm\\:ss\\.ff}'}"/>
 
                 <Separator Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2"/>
@@ -203,6 +204,13 @@
                         ColumnHeaderArrowUpTemplate="{StaticResource HeaderTemplateArrowUp}" ColumnHeaderArrowDownTemplate="{StaticResource HeaderTemplateArrowDown}">
                     <ListView.View>
                         <GridView>
+                            <GridViewColumn Width="44">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Image Width="32" Height="32" Source="{Binding Path=TextureFile, Converter={StaticResource DDSConverter}, ConverterParameter='32,32'}" SnapsToDevicePixels="True" />
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
                             <GridViewColumn Header="Cubes" DisplayMemberBinding="{Binding Name}" Width="175"/>
                             <controls:SortableGridViewColumn Header="Count" Width="80" SortBinding="{Binding Count}">
                                 <GridViewColumn.CellTemplate>
@@ -218,6 +226,13 @@
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </controls:SortableGridViewColumn>
+                            <controls:SortableGridViewColumn Header="Time" Width="90" SortBinding="{Binding Time}">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock TextAlignment="Right" Text="{Binding Path=Time, StringFormat='{}{0:hh\\:mm\\:ss\\.ff}'}" />
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </controls:SortableGridViewColumn>
                         </GridView>
                     </ListView.View>
                 </controls:SortableListView>
@@ -225,6 +240,13 @@
                     ColumnHeaderArrowUpTemplate="{StaticResource HeaderTemplateArrowUp}" ColumnHeaderArrowDownTemplate="{StaticResource HeaderTemplateArrowDown}">
                     <ListView.View>
                         <GridView>
+                            <GridViewColumn Width="44">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Image Width="32" Height="32" Source="{Binding Path=TextureFile, Converter={StaticResource DDSConverter}, ConverterParameter='32,32'}" SnapsToDevicePixels="True" />
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
                             <GridViewColumn Header="Components" DisplayMemberBinding="{Binding Name}" Width="175"/>
                             <controls:SortableGridViewColumn Header="Count" Width="80" SortBinding="{Binding Count}">
                                 <GridViewColumn.CellTemplate>
@@ -261,6 +283,13 @@
                     ColumnHeaderArrowUpTemplate="{StaticResource HeaderTemplateArrowUp}" ColumnHeaderArrowDownTemplate="{StaticResource HeaderTemplateArrowDown}">
                     <ListView.View>
                         <GridView>
+                            <GridViewColumn Width="44">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Image Width="32" Height="32" Source="{Binding Path=TextureFile, Converter={StaticResource DDSConverter}, ConverterParameter='32,32'}" SnapsToDevicePixels="True" />
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
                             <GridViewColumn Header="Ingots" DisplayMemberBinding="{Binding Name}" Width="175"/>
                             <controls:SortableGridViewColumn Header="Amount" Width="80" SortBinding="{Binding Amount}">
                                 <GridViewColumn.CellTemplate>
@@ -297,6 +326,13 @@
                     ColumnHeaderArrowUpTemplate="{StaticResource HeaderTemplateArrowUp}" ColumnHeaderArrowDownTemplate="{StaticResource HeaderTemplateArrowDown}">
                     <ListView.View>
                         <GridView>
+                            <GridViewColumn Width="44">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Image Width="32" Height="32" Source="{Binding Path=TextureFile, Converter={StaticResource DDSConverter}, ConverterParameter='32,32'}" SnapsToDevicePixels="True" />
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
                             <GridViewColumn Header="Ore" DisplayMemberBinding="{Binding Name}" Width="175"/>
                             <controls:SortableGridViewColumn Header="Amount" Width="80" SortBinding="{Binding Amount}">
                                 <GridViewColumn.CellTemplate>
