--- a/Main/SEToolbox/SEToolbox/Views/ControlVoxel.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlVoxel.xaml
@@ -75,9 +75,9 @@
                 </TextBlock.Text>
             </TextBlock>
             <TextBlock Grid.Row="6" Grid.Column="0" Margin="4 0 4 0" Text="Volume:"/>
-            <TextBlock Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Volume, StringFormat={}{0:#,##0.00}m³}" />
+            <TextBlock Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Volume, StringFormat='{}{0:#,##0.00}m³'}" />
             <TextBlock Grid.Row="7" Grid.Column="0" Margin="4 0 4 0" Text="VoxCells:"/>
-            <TextBlock Grid.Row="7" Grid.Column="1" VerticalAlignment="Center" Text="{Binding VoxCells, StringFormat={}{0:#,##0}}" />
+            <TextBlock Grid.Row="7" Grid.Column="1" VerticalAlignment="Center" Text="{Binding VoxCells, StringFormat='{}{0:#,##0}'}" />
             <TextBlock Grid.Row="8" Grid.Column="0" Margin="4 0 4 0" Text="Distance:"/>
             <TextBlock Grid.Row="8" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlayerDistance, StringFormat='{}{0:#,###0.0} m'}" />
 
