--- a/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
@@ -92,15 +92,19 @@
                     <MenuItem.Icon>
                         <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=package_add}" />
                     </MenuItem.Icon>
+                    <!--<MenuItem Header="Create Component/Item" Command="{Binding CreateItemCommand}">
+                        <MenuItem.Icon>
+                            <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=screwdriver}" />
+                        </MenuItem.Icon>
+                    </MenuItem>-->
                     <MenuItem Header="Generate Asteroid Field" Command="{Binding GenerateVoxelFieldCommand}">
                         <MenuItem.Icon>
                             <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=asteroid}" />
                         </MenuItem.Icon>
                     </MenuItem>
                 </MenuItem>
-
                 <Separator Style="{StaticResource DockPanelSeparator}" />
-                <MenuItem Header="World" Command="{Binding WorldCommand}" Padding="0,2,4,2">
+                <MenuItem Header="World" Padding="0,2,4,2">
                     <MenuItem.Icon>
                         <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=SpaceEngineers16}" />
                     </MenuItem.Icon>
@@ -114,9 +118,15 @@
                             <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=document_view}" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Open Workshop" Command="{Binding OpenWorkshopCommand}">
+                    <MenuItem Header="Open Steam Workshop" Command="{Binding OpenWorkshopCommand}">
                         <MenuItem.Icon>
                             <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=workshop16}" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <Separator/>
+                    <MenuItem Header="Component List" Command="{Binding OpenComponentListCommand}">
+                        <MenuItem.Icon>
+                            <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=form_green_view}" />
                         </MenuItem.Icon>
                     </MenuItem>
                 </MenuItem>
