--- a/Main/SEToolbox/SEToolbox/Views/WindowGroupMove.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowGroupMove.xaml
@@ -1,7 +1,6 @@
 ﻿<Window x:Class="SEToolbox.Views.WindowGroupMove"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns:commands="clr-namespace:SEToolbox.Services"
         xmlns:controls="clr-namespace:SEToolbox.Controls"
         xmlns:converters="clr-namespace:SEToolbox.Converters"
@@ -12,10 +11,8 @@
         FocusManager.FocusedElement="{Binding ElementName=uxStartBox}">
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
-        <converters:NullImageConverter x:Key="NullImageConverter"/>
         <converters:BusyMouseConverter x:Key="BusyMouseConverter" />
         <converters:DistanceConverter x:Key="DistanceConverter"/>
-        <converters:ResouceToImageConverter x:Key="ResouceToImageConverter"/>
         <converters:EnumToResouceConverter x:Key="EnumToResouceConverter"/>
     </Window.Resources>
     <Window.Cursor>
@@ -120,6 +117,6 @@
                 </StackPanel>
             </Grid>
         </Grid>
-        <!--<controls:BusyIndicator Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}" />-->
+        <controls:BusyIndicator Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}" />
     </Grid>
 </Window>
